--- a/notebooks/08_job_script.qmd
+++ b/notebooks/08_job_script.qmd
@@ -24,7 +24,7 @@ The main challenges users may face adapting Artemis workflows to Gadi are:
 - [Software installation and version upgrades on Gadi](./11_software.qmd) 
 - [Job arrays not supported on Gadi](./13_parallel_jobs.qmd) 
 
-In this section, we will look at the first two on this list. For the remaining challenges, please visit the specific linked content. We will run training sessions on some of these during the lead up to the Artemis decomission date.
+In this section, we will look at the first two on this list. For the remaining challenges, please visit the specific linked content. We will run training sessions on some of these during the lead up to the Artemis decommission date.
 
 ## Job scheduler 
 
@@ -36,7 +36,7 @@ Submitting jobs on Gadi is very similar to submitting jobs on Artemis. You will 
 
 PBS scripts are text files that contain directives and commands that specify the resources required for a job and the commands to run. Typically they are named `<script_name>.pbs` however the `.pbs` suffix is not required, merely helpful to discern the intention of the script. 
 
-Once submitted to the PBS job scheduler with the `qsub` command, the scheduler reads the compute requirements from the `directives` component of the script, and either runs your job right away (if the requested resources are immediately available) or queues the job to run later (if the requested resurces are not currently available). 
+Once submitted to the PBS job scheduler with the `qsub` command, the scheduler reads the compute requirements from the `directives` component of the script, and either runs your job right away (if the requested resources are immediately available) or queues the job to run later (if the requested resources are not currently available). 
 
 ## Job scheduling priority
 
@@ -133,7 +133,7 @@ Adapting your existing Artemis job scripts to Gadi should be fairly simple for m
 
 ## Selecting the right queue
 
-Artemis `defaultQ` routed jobs to the appropriate queue based on directives and resource avalability. Gadi requires users to directly specify the appropriate queue.
+Artemis `defaultQ` routed jobs to the appropriate queue based on directives and resource availability. Gadi requires users to directly specify the appropriate queue.
 
 To select the queue, you match up the resources your job needs to the queue limits, also factoring in the charge rate. 
 
@@ -145,7 +145,7 @@ View the available queues on the [Gadi queue structure page](https://opus.nci.or
 - GPU queues
 - data transfer queue (copyq) 
 - 'Cascade Lake' and 'Broadwell (ex-Raijin)' queues
-    - The Cascade Lake nodes are newer hardware and thus faster than the Broadwell nodes. Raijin was the previous NCI HPC, decomissioned in 2019 
+    - The Cascade Lake nodes are newer hardware and thus faster than the Broadwell nodes. Raijin was the previous NCI HPC, decommissioned in 2019 
     - They have a lower charge rate than the equivalent Cascade Lake queue, and this can be utilised to help minimise compute cost when the reduced processor speed is not overly detrimental to the job or your research timeline
     - They have different numbers of CPU (48 or 28) and different total memory per node
 
@@ -165,13 +165,13 @@ A `service unit` is based on a CPU hour, ie 'one hour of walltime on one CPU'. E
 
 The charge rates can be found in column 4 of the [queue limits table](https://opus.nci.org.au/spaces/Help/pages/90308823/Queue+Limits). 
 
-It's important to understand that requested memory also impacts the charge rate, not just the requested CPU, walltime and queue. In each queue, a CPU has an allocated amount of memory for accounting purposes. For example, in the Cascade Lake `normal` queue, there are 48 CPU and 192 GB total RAM. The amount of memory per CPU for accounting purposes is therefore 192 / 48 = 4 GB. If you request 1 CPU and 4 GB RAM, only the CPU affects the charge rate, as you are using only the memory allocation for one CPU. If however you request 1 CPU and 8 GB RAM, your charge rate will be based off 2 CPU of use, since you are using the memory allowance of 2 CPU. Note this is 'for accounting purposes' only, ie it is technically feasible for your job to run on 1 CPU and access 8 GB RAM (or more). This accounting is described on the NCI [job costs](https://opus.nci.org.au/spaces/Help/pages/236880942/Job+Costs...) page, and will also be sumamrised below. 
+It's important to understand that requested memory also impacts the charge rate, not just the requested CPU, walltime and queue. In each queue, a CPU has an allocated amount of memory for accounting purposes. For example, in the Cascade Lake `normal` queue, there are 48 CPU and 192 GB total RAM. The amount of memory per CPU for accounting purposes is therefore 192 / 48 = 4 GB. If you request 1 CPU and 4 GB RAM, only the CPU affects the charge rate, as you are using only the memory allocation for one CPU. If however you request 1 CPU and 8 GB RAM, your charge rate will be based off 2 CPU of use, since you are using the memory allowance of 2 CPU. Note this is 'for accounting purposes' only, ie it is technically feasible for your job to run on 1 CPU and access 8 GB RAM (or more). This accounting is described on the NCI [job costs](https://opus.nci.org.au/spaces/Help/pages/236880942/Job+Costs...) page, and will also be summarised below. 
 
-**Don't be alarmed by the charge rates:** please submit your job to the most appropriate queue based on required resources. The accounting method combined with stricter walltimes, newer hardware and software, and more vast physcial resources compared to Artemis will likely see your compute jobs complete in a faster turnaround time compared to what you are used to. 
+**Don't be alarmed by the charge rates:** please submit your job to the most appropriate queue based on required resources. The accounting method combined with stricter walltimes, newer hardware and software, and more vast physical resources compared to Artemis will likely see your compute jobs complete in a faster turnaround time compared to what you are used to. 
 
 Understanding charge rates is important for two main reasons:
 
-1. Judicious use of resources. KSU is provided to you in-kind by The University of Sydney. It is your responsibility to ensure efficient use of these resources. Selecting the appropriate queue for your job avoids wastage and avoids unecessary impacts on other users of this national resource. 
+1. Judicious use of resources. KSU is provided to you in-kind by The University of Sydney. It is your responsibility to ensure efficient use of these resources. Selecting the appropriate queue for your job avoids wastage and avoids unnecessary impacts on other users of this national resource. 
 2. Ensuring your job can run. Jobs can only leave the route queue and join the execution queue if sufficient SU are available to the project assuming the job runs for its full requested walltime. 
 
 For example, if your project has 1 KSU and you submit a job script with the following directives:
@@ -214,7 +214,7 @@ Since 1728 SU is more than the 1 KSU the project has available, the job cannot r
 1. [Obtain more KSU](https://sydneyuni.atlassian.net/wiki/spaces/RC/pages/3448733944/NCI-Sydney+Scheme#Additional-Service-Unit-Requests)
 2. Reconfigure your job to fit under the 1 KSU you have available. 
 
-You might consider reducing walltime, CPUs, change the queue, etc, depending on your job and what you expect are its minimum viable resouce requests. You can do this by:
+You might consider reducing walltime, CPUs, change the queue, etc, depending on your job and what you expect are its minimum viable resource requests. You can do this by:
 
 Killing the job (`qdel <jobID>`), editing the directives and resubmitting, **OR** use the `qalter` PBS command to reduce the resource requests of the held job. 
 
@@ -264,7 +264,7 @@ See [job efficiency](10_job_efficiency.qmd) for tips to determine the best compu
 
 #### Example 3
 
-You have a job that requires 20,000 CPU. Fill in the below directives for this job, including the maximum permissable walltime:
+You have a job that requires 20,000 CPU. Fill in the below directives for this job, including the maximum permissible walltime:
 
 ```bash
 #PBS -l ncpus=<value>
@@ -282,7 +282,7 @@ You have a job that requires 20,000 CPU. Fill in the below directives for this j
 
 Why 20,016? When requesting >1 node on Gadi, only whole nodes can be requested. So to reach 20,000 CPU in a single job would require the use of the Cascade Lake normal queue, where the nodes have 48 CPU per node, and this would be 20,000 * 48 = 416.7 nodes, so we need to round up to 417 nodes, which is 417 * 48 = 20,016 CPU. 
 
-Why 5 hour walltime not 48 hours? As the quantity of CPU requested increases, maximum walltime goes down. This information can be found in the last column on the queue limts table. 5 hours is the maximum amount of walltime allowed for jobs requesting more than 3024 CPUs (63 nodes) in this queue. To request the maximum walltime of 48 hours on this queue, the job must request at most 672 cores (14 nodes). 
+Why 5 hour walltime not 48 hours? As the quantity of CPU requested increases, maximum walltime goes down. This information can be found in the last column on the queue limits table. 5 hours is the maximum amount of walltime allowed for jobs requesting more than 3024 CPUs (63 nodes) in this queue. To request the maximum walltime of 48 hours on this queue, the job must request at most 672 cores (14 nodes). 
 
 If your job required *exactly* 20,000 CPU, you would simply provide this hard-coded value to the relevant command. The number of requested KSU to the job can be accessed from the environment variable `$PBS_NCPUS`.
 
@@ -302,20 +302,20 @@ gpuvolta or dgxa100 queue
 
 The only Gadi queue with internet access is `copyq`. This queue is not suitable for running compute tasks. It allows only single-core jobs and has a maximum walltime of 10 hours. Jobs that require up-to-date information retrieval from external servers have a few options: 
 
-1. Split the job into two parts: a download or web query task submitted to `copyq`, ensuring that the retrieved data is saved to persistent disk (ie not the [local-to-the-node SSD storage](https://opus.nci.org.au/spaces/Help/pages/236880086/Gadi+Resources...#GadiResources...-jobfs) that is deleted upon job completion), followed by a a compute job submitted to one of the appropriate compute queues, reading in the requried inputs saved from job 1. 
+1. Split the job into two parts: a download or web query task submitted to `copyq`, ensuring that the retrieved data is saved to persistent disk (ie not the [local-to-the-node SSD storage](https://opus.nci.org.au/spaces/Help/pages/236880086/Gadi+Resources...#GadiResources...-jobfs) that is deleted upon job completion), followed by a a compute job submitted to one of the appropriate compute queues, reading in the required inputs saved from job 1. 
 2. Run the job via [ARE](https://opus.nci.org.au/spaces/Help/pages/162431120/ARE+User+Guide), which provides a graphical user interface run on Gadi's compute queues plus internet access capability. 
 3. Use NCI's [Nirin cloud](https://opus.nci.org.au/display/Help/Nirin+Cloud+User+Guide) instead of Gadi.  
 
 
 ## Submitting a PBS script
 
-Like on Artemis, the `qsub` command is used to submit the job to the scheduler. Please visit the [NCI Gadi job submisison page](https://opus.nci.org.au/spaces/Help/pages/236880320/Job+Submission...) if you require  more details on this. 
+Like on Artemis, the `qsub` command is used to submit the job to the scheduler. Please visit the [NCI Gadi job submission page](https://opus.nci.org.au/spaces/Help/pages/236880320/Job+Submission...) if you require  more details on this. 
 
 After your job is submitted, job monitoring and job logs are very similar to your experience on Artemis. Please see [job monitoring](./09_job_monitoring.qmd) for more details. 
 
 ## Interactive jobs
 
-Interactive jobs are useful for jobs that require user input feedback as an analysis progresses, or can be useful for testing commands/tools prior to submiting a full job via a PBS script. 
+Interactive jobs are useful for jobs that require user input feedback as an analysis progresses, or can be useful for testing commands/tools prior to submitting a full job via a PBS script. 
 
 Running an interactive job on Gadi is very similar to an Artemis interactive job: you provide the relevant directives on the command line rather than from within a script, and include `-I` instead of `#PBS -q <queue>`. 
 
